--- a/www/style.css
+++ b/www/style.css
@@ -4,9 +4,15 @@ body {margin:0;}
 /* canvas{
 	border: 1px solid black;
 } */
-.state > *{
-	height: 400px;
+
+nav{
+	position: fixed;
 }
+.nav-placeholder{
+	width: 100%;
+	height: 45px;
+}
+
 #nav{
 	width: 100%;
 	bottom: 0px;
