--- a/www/style.css
+++ b/www/style.css
@@ -4,6 +4,13 @@ body {margin:0;}
 /* canvas{
 	border: 1px solid black;
 } */
+.title{
+	font-weight: 600;
+}
+
+.col.center-align{
+	width: 100%;
+}
 
 nav{
 	position: fixed;
@@ -35,8 +42,10 @@ nav{
 	font-family: monospace;
 
 }
-i{
-	color: white;
+
+.material-icons.black-text{
+	padding-right: 10px;
+	padding-left: 5px;
 }
 
 .circle {
@@ -59,6 +68,10 @@ i{
 }
 
 /* New CSS */
+
+.card-panel{
+	padding: 10px;
+}
 
 .text-content{
 	padding: 15px;
